--- a/RPCmodel/RPC/Areas/Identity/Pages/Account/Register.cshtml
+++ b/RPCmodel/RPC/Areas/Identity/Pages/Account/Register.cshtml
@@ -45,8 +45,12 @@
             <input asp-for="Input.LastName" class="form-control" />
             <span asp-validation-for="Input.LastName" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary">Register</button>
+        <button type="submit" class="btn btn-primary">Save</button>
 
+    </form>
+    <hr />
+    <form id="registerForm" asp-area="Identity" asp-page="/Account/Login" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
+        <button id="register" class="btn btn-primary">Cancel</button>
     </form>
     <br />
 </div>
