NOW  IT SHOWS THE DATABASE AAAAAAAAAAAAA

--- a/RPCmodel/RPC/Areas/Identity/Pages/Account/Login.cshtml
+++ b/RPCmodel/RPC/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,7 +2,7 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "RPC :: Auth";
     Layout = "~/Areas/Identity/Pages/_AuthLayout.cshtml";
 }
 
