--- a/RPCmodel/RPC/Pages/Index.cshtml
+++ b/RPCmodel/RPC/Pages/Index.cshtml
@@ -1,10 +1,49 @@
 ﻿@page
-@model IndexModel
+@model  IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    <a>Username</a>
+                </th>
+                <th>
+                    <a>First Name</a>
+                </th>
+                <th>
+                    <a>Last Name</a>
+                </th>
+                <th>
+                    <a>Birthdate</a>
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.RPCUsers)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.UserName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FirstName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.BirthDate)
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+    
+    
+    
 </div>
