--- a/RPCmodel/RPC/Areas/Identity/Pages/Account/Register.cshtml
+++ b/RPCmodel/RPC/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "RPC :: Auth";
     Layout = "~/Areas/Identity/Pages/_AuthLayout.cshtml";
 }
 
