I was missing the birthdate field in the register. Also, changed the title of the homepage.

--- a/RPCmodel/RPC/Areas/Identity/Pages/Account/Register.cshtml
+++ b/RPCmodel/RPC/Areas/Identity/Pages/Account/Register.cshtml
@@ -45,6 +45,11 @@
             <input asp-for="Input.LastName" class="form-control" />
             <span asp-validation-for="Input.LastName" class="text-danger"></span>
         </div>
+        <div class="form-group">
+            <label asp-for="Input.BirthDate" class="control-label"></label>
+            <input asp-for="Input.BirthDate" class="form-control" />
+            <span asp-validation-for="Input.BirthDate" class="text-danger"></span>
+        </div>
         <button type="submit" class="btn btn-primary">Save</button>
 
     </form>
