--- a/RPCmodel/RPC/Pages/Index.cshtml
+++ b/RPCmodel/RPC/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model  IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "RPC :: Auth";
 }
 
 <div class="text-center">
