Modified the htmls so it looks more like the required design.

--- a/RPCmodel/RPC/Pages/Shared/_Layout.cshtml
+++ b/RPCmodel/RPC/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,8 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">RPC</a>
+                <img src="https://redprogramacioncompetitiva.com/images/lgo_rpc1.png" height="70" width="110" />
+                <a class="navbar-brand" asp-area="" asp-page="/Index"><b>RPC :: Red de Programación Competitiva</b></a>
                 <partial name="_LoginPartial.cshtml" />
             </div>
         </nav>
